fixed z-index on poster full screen

--- a/src/less/skins/sleek.less
+++ b/src/less/skins/sleek.less
@@ -55,10 +55,14 @@
   .jp-gui {
     position: fixed;
     bottom: 0;
-    z-index: 100;
     width: 100%;
     height:42px;
     background-color: #e5e5e5;
+
+    :not(.jp-state-full-screen)& {
+      z-index: 100;
+    }
+    
     &.jp-state-no-browser-support {
       height: auto;
       .jp-controls {
